code/subarchitectures/dialogue.sa/trunk/apis/dialogue/src/java/de/dfki/lt/tr/dialogue/cplan/RuleParser.output
Terminals unused in grammar

   COMPARISON


Grammar

    0 $accept: rules $end

    1 rules: rule '.' rules
    2      | rule '.'

    3 rule: matches ARROW actions
    4     | error

    5 matches: expr gmatches

    6 gmatches: ',' GVAR '^' expr gmatches
    7         | /* empty */

    8 expr: term '^' expr
    9     | term '|' expr
   10     | term

   11 term: '<' id_lvar '>' term
   12     | '<' id_lvar '>'
   13     | feature

   14 feature: nominal
   15        | nominal id_lvar
   16        | ':' id_lvar
   17        | id_lvar
   18        | '!' term
   19        | '(' expr ')'
   20        | ID '(' args ')'

   21 nominal: ID ':'
   22        | VAR ':'
   23        | GVAR ':'

   24 id_lvar: VAR
   25        | ID

   26 args: expr ',' args
   27     | STRING ',' args
   28     | /* empty */

   29 actions: action
   30        | action ',' actions

   31 action: lval path '=' rexpr
   32       | lval path '^' rexpr
   33       | lval path '!' '<' ID '>'

   34 lval: VAR
   35     | '#'
   36     | GVAR

   37 path: '<' ID '>' path
   38     | /* empty */

   39 rexpr: rterm '^' rexpr
   40      | rterm

   41 rterm: '<' ID '>' rterm
   42      | rfeat

   43 rfeat: rnominal
   44      | rnominal r_id_var
   45      | ':' r_id_var
   46      | r_id_var
   47      | '(' rexpr ')'
   48      | ID '(' args ')'

   49 rnominal: r_id_var ':'

   50 r_id_var: ID
   51         | VAR
   52         | GVAR


Terminals, with rules where they appear

$end (0) 0
'!' (33) 18 33
'#' (35) 35
'(' (40) 19 20 47 48
')' (41) 19 20 47 48
',' (44) 6 26 27 30
'.' (46) 1 2
':' (58) 16 21 22 23 45 49
'<' (60) 11 12 33 37 41
'=' (61) 31
'>' (62) 11 12 33 37 41
'^' (94) 6 8 32 39
'|' (124) 9
error (256) 4
ID (258) 20 21 25 33 37 41 48 50
VAR (259) 22 24 34 51
GVAR (260) 6 23 36 52
COMPARISON (261)
ARROW (262) 3
STRING (263) 27


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
rules (22)
    on left: 1 2, on right: 0 1
rule (23)
    on left: 3 4, on right: 1 2
matches (24)
    on left: 5, on right: 3
gmatches (25)
    on left: 6 7, on right: 5 6
expr (26)
    on left: 8 9 10, on right: 5 6 8 9 19 26
term (27)
    on left: 11 12 13, on right: 8 9 10 11 18
feature (28)
    on left: 14 15 16 17 18 19 20, on right: 13
nominal (29)
    on left: 21 22 23, on right: 14 15
id_lvar (30)
    on left: 24 25, on right: 11 12 15 16 17
args (31)
    on left: 26 27 28, on right: 20 26 27 48
actions (32)
    on left: 29 30, on right: 3 30
action (33)
    on left: 31 32 33, on right: 29 30
lval (34)
    on left: 34 35 36, on right: 31 32 33
path (35)
    on left: 37 38, on right: 31 32 33 37
rexpr (36)
    on left: 39 40, on right: 31 32 39 47
rterm (37)
    on left: 41 42, on right: 39 40 41
rfeat (38)
    on left: 43 44 45 46 47 48, on right: 42
rnominal (39)
    on left: 49, on right: 43 44
r_id_var (40)
    on left: 50 51 52, on right: 44 45 46 49


state 0

    0 $accept: . rules $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    VAR    shift, and go to state 3
    GVAR   shift, and go to state 4
    '<'    shift, and go to state 5
    ':'    shift, and go to state 6
    '!'    shift, and go to state 7
    '('    shift, and go to state 8

    rules    go to state 9
    rule     go to state 10
    matches  go to state 11
    expr     go to state 12
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 1

    4 rule: error .

    $default  reduce using rule 4 (rule)


state 2

   20 feature: ID . '(' args ')'
   21 nominal: ID . ':'
   25 id_lvar: ID .

    ':'  shift, and go to state 17
    '('  shift, and go to state 18

    $default  reduce using rule 25 (id_lvar)


state 3

   22 nominal: VAR . ':'
   24 id_lvar: VAR .

    ':'  shift, and go to state 19

    $default  reduce using rule 24 (id_lvar)


state 4

   23 nominal: GVAR . ':'

    ':'  shift, and go to state 20


state 5

   11 term: '<' . id_lvar '>' term
   12     | '<' . id_lvar '>'

    ID   shift, and go to state 21
    VAR  shift, and go to state 22

    id_lvar  go to state 23


state 6

   16 feature: ':' . id_lvar

    ID   shift, and go to state 21
    VAR  shift, and go to state 22

    id_lvar  go to state 24


state 7

   18 feature: '!' . term

    ID    shift, and go to state 2
    VAR   shift, and go to state 3
    GVAR  shift, and go to state 4
    '<'   shift, and go to state 5
    ':'   shift, and go to state 6
    '!'   shift, and go to state 7
    '('   shift, and go to state 8

    term     go to state 25
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 8

   19 feature: '(' . expr ')'

    ID    shift, and go to state 2
    VAR   shift, and go to state 3
    GVAR  shift, and go to state 4
    '<'   shift, and go to state 5
    ':'   shift, and go to state 6
    '!'   shift, and go to state 7
    '('   shift, and go to state 8

    expr     go to state 26
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 9

    0 $accept: rules . $end

    $end  shift, and go to state 27


state 10

    1 rules: rule . '.' rules
    2      | rule . '.'

    '.'  shift, and go to state 28


state 11

    3 rule: matches . ARROW actions

    ARROW  shift, and go to state 29


state 12

    5 matches: expr . gmatches

    ','  shift, and go to state 30

    $default  reduce using rule 7 (gmatches)

    gmatches  go to state 31


state 13

    8 expr: term . '^' expr
    9     | term . '|' expr
   10     | term .

    '^'  shift, and go to state 32
    '|'  shift, and go to state 33

    $default  reduce using rule 10 (expr)


state 14

   13 term: feature .

    $default  reduce using rule 13 (term)


state 15

   14 feature: nominal .
   15        | nominal . id_lvar

    ID   shift, and go to state 21
    VAR  shift, and go to state 22

    $default  reduce using rule 14 (feature)

    id_lvar  go to state 34


state 16

   17 feature: id_lvar .

    $default  reduce using rule 17 (feature)


state 17

   21 nominal: ID ':' .

    $default  reduce using rule 21 (nominal)


state 18

   20 feature: ID '(' . args ')'

    ID      shift, and go to state 2
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 4
    STRING  shift, and go to state 35
    '<'     shift, and go to state 5
    ':'     shift, and go to state 6
    '!'     shift, and go to state 7
    '('     shift, and go to state 8

    $default  reduce using rule 28 (args)

    expr     go to state 36
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16
    args     go to state 37


state 19

   22 nominal: VAR ':' .

    $default  reduce using rule 22 (nominal)


state 20

   23 nominal: GVAR ':' .

    $default  reduce using rule 23 (nominal)


state 21

   25 id_lvar: ID .

    $default  reduce using rule 25 (id_lvar)


state 22

   24 id_lvar: VAR .

    $default  reduce using rule 24 (id_lvar)


state 23

   11 term: '<' id_lvar . '>' term
   12     | '<' id_lvar . '>'

    '>'  shift, and go to state 38


state 24

   16 feature: ':' id_lvar .

    $default  reduce using rule 16 (feature)


state 25

   18 feature: '!' term .

    $default  reduce using rule 18 (feature)


state 26

   19 feature: '(' expr . ')'

    ')'  shift, and go to state 39


state 27

    0 $accept: rules $end .

    $default  accept


state 28

    1 rules: rule '.' . rules
    2      | rule '.' .

    error  shift, and go to state 1
    ID     shift, and go to state 2
    VAR    shift, and go to state 3
    GVAR   shift, and go to state 4
    '<'    shift, and go to state 5
    ':'    shift, and go to state 6
    '!'    shift, and go to state 7
    '('    shift, and go to state 8

    $end  reduce using rule 2 (rules)

    rules    go to state 40
    rule     go to state 10
    matches  go to state 11
    expr     go to state 12
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 29

    3 rule: matches ARROW . actions

    VAR   shift, and go to state 41
    GVAR  shift, and go to state 42
    '#'   shift, and go to state 43

    actions  go to state 44
    action   go to state 45
    lval     go to state 46


state 30

    6 gmatches: ',' . GVAR '^' expr gmatches

    GVAR  shift, and go to state 47


state 31

    5 matches: expr gmatches .

    $default  reduce using rule 5 (matches)


state 32

    8 expr: term '^' . expr

    ID    shift, and go to state 2
    VAR   shift, and go to state 3
    GVAR  shift, and go to state 4
    '<'   shift, and go to state 5
    ':'   shift, and go to state 6
    '!'   shift, and go to state 7
    '('   shift, and go to state 8

    expr     go to state 48
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 33

    9 expr: term '|' . expr

    ID    shift, and go to state 2
    VAR   shift, and go to state 3
    GVAR  shift, and go to state 4
    '<'   shift, and go to state 5
    ':'   shift, and go to state 6
    '!'   shift, and go to state 7
    '('   shift, and go to state 8

    expr     go to state 49
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 34

   15 feature: nominal id_lvar .

    $default  reduce using rule 15 (feature)


state 35

   27 args: STRING . ',' args

    ','  shift, and go to state 50


state 36

   26 args: expr . ',' args

    ','  shift, and go to state 51


state 37

   20 feature: ID '(' args . ')'

    ')'  shift, and go to state 52


state 38

   11 term: '<' id_lvar '>' . term
   12     | '<' id_lvar '>' .

    ID    shift, and go to state 2
    VAR   shift, and go to state 3
    GVAR  shift, and go to state 4
    '<'   shift, and go to state 5
    ':'   shift, and go to state 6
    '!'   shift, and go to state 7
    '('   shift, and go to state 8

    $default  reduce using rule 12 (term)

    term     go to state 53
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 39

   19 feature: '(' expr ')' .

    $default  reduce using rule 19 (feature)


state 40

    1 rules: rule '.' rules .

    $default  reduce using rule 1 (rules)


state 41

   34 lval: VAR .

    $default  reduce using rule 34 (lval)


state 42

   36 lval: GVAR .

    $default  reduce using rule 36 (lval)


state 43

   35 lval: '#' .

    $default  reduce using rule 35 (lval)


state 44

    3 rule: matches ARROW actions .

    $default  reduce using rule 3 (rule)


state 45

   29 actions: action .
   30        | action . ',' actions

    ','  shift, and go to state 54

    $default  reduce using rule 29 (actions)


state 46

   31 action: lval . path '=' rexpr
   32       | lval . path '^' rexpr
   33       | lval . path '!' '<' ID '>'

    '<'  shift, and go to state 55

    $default  reduce using rule 38 (path)

    path  go to state 56


state 47

    6 gmatches: ',' GVAR . '^' expr gmatches

    '^'  shift, and go to state 57


state 48

    8 expr: term '^' expr .

    $default  reduce using rule 8 (expr)


state 49

    9 expr: term '|' expr .

    $default  reduce using rule 9 (expr)


state 50

   27 args: STRING ',' . args

    ID      shift, and go to state 2
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 4
    STRING  shift, and go to state 35
    '<'     shift, and go to state 5
    ':'     shift, and go to state 6
    '!'     shift, and go to state 7
    '('     shift, and go to state 8

    $default  reduce using rule 28 (args)

    expr     go to state 36
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16
    args     go to state 58


state 51

   26 args: expr ',' . args

    ID      shift, and go to state 2
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 4
    STRING  shift, and go to state 35
    '<'     shift, and go to state 5
    ':'     shift, and go to state 6
    '!'     shift, and go to state 7
    '('     shift, and go to state 8

    $default  reduce using rule 28 (args)

    expr     go to state 36
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16
    args     go to state 59


state 52

   20 feature: ID '(' args ')' .

    $default  reduce using rule 20 (feature)


state 53

   11 term: '<' id_lvar '>' term .

    $default  reduce using rule 11 (term)


state 54

   30 actions: action ',' . actions

    VAR   shift, and go to state 41
    GVAR  shift, and go to state 42
    '#'   shift, and go to state 43

    actions  go to state 60
    action   go to state 45
    lval     go to state 46


state 55

   37 path: '<' . ID '>' path

    ID  shift, and go to state 61


state 56

   31 action: lval path . '=' rexpr
   32       | lval path . '^' rexpr
   33       | lval path . '!' '<' ID '>'

    '^'  shift, and go to state 62
    '!'  shift, and go to state 63
    '='  shift, and go to state 64


state 57

    6 gmatches: ',' GVAR '^' . expr gmatches

    ID    shift, and go to state 2
    VAR   shift, and go to state 3
    GVAR  shift, and go to state 4
    '<'   shift, and go to state 5
    ':'   shift, and go to state 6
    '!'   shift, and go to state 7
    '('   shift, and go to state 8

    expr     go to state 65
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 58

   27 args: STRING ',' args .

    $default  reduce using rule 27 (args)


state 59

   26 args: expr ',' args .

    $default  reduce using rule 26 (args)


state 60

   30 actions: action ',' actions .

    $default  reduce using rule 30 (actions)


state 61

   37 path: '<' ID . '>' path

    '>'  shift, and go to state 66


state 62

   32 action: lval path '^' . rexpr

    ID    shift, and go to state 67
    VAR   shift, and go to state 68
    GVAR  shift, and go to state 69
    '<'   shift, and go to state 70
    ':'   shift, and go to state 71
    '('   shift, and go to state 72

    rexpr     go to state 73
    rterm     go to state 74
    rfeat     go to state 75
    rnominal  go to state 76
    r_id_var  go to state 77


state 63

   33 action: lval path '!' . '<' ID '>'

    '<'  shift, and go to state 78


state 64

   31 action: lval path '=' . rexpr

    ID    shift, and go to state 67
    VAR   shift, and go to state 68
    GVAR  shift, and go to state 69
    '<'   shift, and go to state 70
    ':'   shift, and go to state 71
    '('   shift, and go to state 72

    rexpr     go to state 79
    rterm     go to state 74
    rfeat     go to state 75
    rnominal  go to state 76
    r_id_var  go to state 77


state 65

    6 gmatches: ',' GVAR '^' expr . gmatches

    ','  shift, and go to state 30

    $default  reduce using rule 7 (gmatches)

    gmatches  go to state 80


state 66

   37 path: '<' ID '>' . path

    '<'  shift, and go to state 55

    $default  reduce using rule 38 (path)

    path  go to state 81


state 67

   48 rfeat: ID . '(' args ')'
   50 r_id_var: ID .

    '('  shift, and go to state 82

    $default  reduce using rule 50 (r_id_var)


state 68

   51 r_id_var: VAR .

    $default  reduce using rule 51 (r_id_var)


state 69

   52 r_id_var: GVAR .

    $default  reduce using rule 52 (r_id_var)


state 70

   41 rterm: '<' . ID '>' rterm

    ID  shift, and go to state 83


state 71

   45 rfeat: ':' . r_id_var

    ID    shift, and go to state 84
    VAR   shift, and go to state 68
    GVAR  shift, and go to state 69

    r_id_var  go to state 85


state 72

   47 rfeat: '(' . rexpr ')'

    ID    shift, and go to state 67
    VAR   shift, and go to state 68
    GVAR  shift, and go to state 69
    '<'   shift, and go to state 70
    ':'   shift, and go to state 71
    '('   shift, and go to state 72

    rexpr     go to state 86
    rterm     go to state 74
    rfeat     go to state 75
    rnominal  go to state 76
    r_id_var  go to state 77


state 73

   32 action: lval path '^' rexpr .

    $default  reduce using rule 32 (action)


state 74

   39 rexpr: rterm . '^' rexpr
   40      | rterm .

    '^'  shift, and go to state 87

    $default  reduce using rule 40 (rexpr)


state 75

   42 rterm: rfeat .

    $default  reduce using rule 42 (rterm)


state 76

   43 rfeat: rnominal .
   44      | rnominal . r_id_var

    ID    shift, and go to state 84
    VAR   shift, and go to state 68
    GVAR  shift, and go to state 69

    $default  reduce using rule 43 (rfeat)

    r_id_var  go to state 88


state 77

   46 rfeat: r_id_var .
   49 rnominal: r_id_var . ':'

    ':'  shift, and go to state 89

    $default  reduce using rule 46 (rfeat)


state 78

   33 action: lval path '!' '<' . ID '>'

    ID  shift, and go to state 90


state 79

   31 action: lval path '=' rexpr .

    $default  reduce using rule 31 (action)


state 80

    6 gmatches: ',' GVAR '^' expr gmatches .

    $default  reduce using rule 6 (gmatches)


state 81

   37 path: '<' ID '>' path .

    $default  reduce using rule 37 (path)


state 82

   48 rfeat: ID '(' . args ')'

    ID      shift, and go to state 2
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 4
    STRING  shift, and go to state 35
    '<'     shift, and go to state 5
    ':'     shift, and go to state 6
    '!'     shift, and go to state 7
    '('     shift, and go to state 8

    $default  reduce using rule 28 (args)

    expr     go to state 36
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16
    args     go to state 91


state 83

   41 rterm: '<' ID . '>' rterm

    '>'  shift, and go to state 92


state 84

   50 r_id_var: ID .

    $default  reduce using rule 50 (r_id_var)


state 85

   45 rfeat: ':' r_id_var .

    $default  reduce using rule 45 (rfeat)


state 86

   47 rfeat: '(' rexpr . ')'

    ')'  shift, and go to state 93


state 87

   39 rexpr: rterm '^' . rexpr

    ID    shift, and go to state 67
    VAR   shift, and go to state 68
    GVAR  shift, and go to state 69
    '<'   shift, and go to state 70
    ':'   shift, and go to state 71
    '('   shift, and go to state 72

    rexpr     go to state 94
    rterm     go to state 74
    rfeat     go to state 75
    rnominal  go to state 76
    r_id_var  go to state 77


state 88

   44 rfeat: rnominal r_id_var .

    $default  reduce using rule 44 (rfeat)


state 89

   49 rnominal: r_id_var ':' .

    $default  reduce using rule 49 (rnominal)


state 90

   33 action: lval path '!' '<' ID . '>'

    '>'  shift, and go to state 95


state 91

   48 rfeat: ID '(' args . ')'

    ')'  shift, and go to state 96


state 92

   41 rterm: '<' ID '>' . rterm

    ID    shift, and go to state 67
    VAR   shift, and go to state 68
    GVAR  shift, and go to state 69
    '<'   shift, and go to state 70
    ':'   shift, and go to state 71
    '('   shift, and go to state 72

    rterm     go to state 97
    rfeat     go to state 75
    rnominal  go to state 76
    r_id_var  go to state 77


state 93

   47 rfeat: '(' rexpr ')' .

    $default  reduce using rule 47 (rfeat)


state 94

   39 rexpr: rterm '^' rexpr .

    $default  reduce using rule 39 (rexpr)


state 95

   33 action: lval path '!' '<' ID '>' .

    $default  reduce using rule 33 (action)


state 96

   48 rfeat: ID '(' args ')' .

    $default  reduce using rule 48 (rfeat)


state 97

   41 rterm: '<' ID '>' rterm .

    $default  reduce using rule 41 (rterm)
